[gd_scene load_steps=6 format=2]

[ext_resource path="res://b_Controllable.gd" type="Script" id=1]
[ext_resource path="res://Sprite-0001.png" type="Texture" id=2]
[ext_resource path="res://b_collision_monitor_player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.1466
height = 2.2887

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.04828
height = 2.2887

[node name="player" type="KinematicBody2D"]

[node name="b_Controllable" type="Node" parent="."]
script = ExtResource( 1 )
speed = 400

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="l_hand" type="Node2D" parent="."]
position = Vector2( -7.22559, -2.69611 )
__meta__ = {
"_edit_lock_": true
}

[node name="r_hand" type="Node2D" parent="."]
position = Vector2( 7.33343, -2.58827 )
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox_p" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox_p"]
position = Vector2( -0.0499649, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0499649, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="b_collision_monitor_player" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="area_entered" from="hitbox_p" to="b_collision_monitor_player" method="_on_hitbox_p_area_entered"]
[connection signal="area_exited" from="hitbox_p" to="b_collision_monitor_player" method="_on_hitbox_p_area_exited"]
